--- a/app/views/catalog/_document.html.erb
+++ b/app/views/catalog/_document.html.erb
@@ -1,5 +1,5 @@
 <div class="document col-md-4 col-sm-6">
-  <a href="/collections/wpna-wpna-war-and-peace-in-the-nuclear-age/interviews">
+  <a href="/catalog/<%= document.id %>">
       <!-- Sort order: 2.0 -->
       <img src="<%= document[:img_src] || 'https://s3.amazonaws.com/openvault.wgbh.org/special_collections/war_peace/war_peace.png' %>">
       <div class="info">
