kill one more roundrect.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -1,5 +1,5 @@
 .blacklight-catalog-index {
-    .btn {
+    .btn,.dropdown-menu {
         border-radius: 0px; // TODO: Perhaps move up?
     }
     #facets .top-panel-heading {
