--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -13,9 +13,9 @@
           <span class="glyphicon glyphicon-search"></span>
         </form>
       </div>
-      <div class="col-sm-2"><%= link_to(t('series'), '/series') %></div>
-      <div class="col-sm-2"><%= link_to(t('exhibits'), '/exhibits') %></div>
-      <div class="col-sm-2"><%= link_to(t('collections'), '/collections') %></div>
+      <div class="col-sm-2 hidden-xs"><%= link_to(t('series'), '/series') %></div>
+      <div class="col-sm-2 hidden-xs"><%= link_to(t('exhibits'), '/exhibits') %></div>
+      <div class="col-sm-2 hidden-xs"><%= link_to(t('collections'), '/collections') %></div>
     </div>
   </div>
 </div>
