--- a/app/views/catalog/_document.html.erb
+++ b/app/views/catalog/_document.html.erb
@@ -1,7 +1,7 @@
 <div class="document col-md-4 col-sm-6">
   <a href="/catalog/<%= document.id %>">
       <!-- Sort order: 2.0 -->
-      <img src="<%= document[:img_src] || 'https://s3.amazonaws.com/openvault.wgbh.org/special_collections/war_peace/war_peace.png' %>">
+      <img src="<%= document[:thumbnail_src] %>">
       <div class="info">
         <%= document[:title] %>
       </div>
