Smaller image on exibit show.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -39,7 +39,7 @@
     }
 }
 
-.blacklight-collections-show {
+.blacklight-collections-show,.blacklight-exhibits-show {
     div.pull-left img {
         // This is very ad hoc.
         margin-left: -$grid-gutter-width/2;
