--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,52 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      Carousel: TODO
+      
+      
+      
+      
+      
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/boston_civil_rights/boston_civil_rights_554x340.png">
+            <div class="carousel-caption">
+              First
+            </div>
+          </div>
+          <div class="item">
+            <img lazy-src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/needlework/needlework_554x340.png">
+            <div class="carousel-caption">
+              Second
+            </div>
+          </div>
+          <div class="item">
+            <img lazy-src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/art_of_asian_cooking/art_of_asian_cooking_554x340.png">
+            <div class="carousel-caption">
+              Third
+            </div>
+          </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      
+      
+      
+      
+      
+      
+      
     </div>
   </div>
 
