Lazy load one ahead.

--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -4,6 +4,10 @@
         a { color: $dark-blue; }
         padding: 1em 0em; // no side padding, to avoid unnecessary line-wrapping in medium width.
     }
+    
+    .carousel {
+        
+    }
  
     // Text with transparent background
 /*        img {
