--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div class="carousel slide" data-ride="carousel" data-interval="5000"><%# 100 seconds between images, to minimize distractions for now. %>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
@@ -10,7 +10,7 @@
       </a>
     </div>
     <div class="item">
-      <img lazy-src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/needlework/needlework_554x340.png">
+      <img src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/needlework/needlework_554x340.png">
       <div class="carousel-caption">
         Second
       </div>
