--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -1,26 +1,22 @@
-<div class="carousel slide" data-ride="carousel" data-interval="5000"><%# 100 seconds between images, to minimize distractions for now. %>
+<div class="carousel slide" data-ride="carousel" data-interval="100000">
+  <%# 100 seconds between images, to minimize distractions for now. %>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <a href='/TODO'><img src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/boston_civil_rights/boston_civil_rights_554x340.png">
-      <div class="carousel-caption">
-        First
+    <% Carousel.items.each_with_index do |item, index| %>
+      <div class="item <%= 'active' if index == 0 %>">
+        <a href="<%= item.href %>">
+          <% if index <= 1 # The first 2 images need to be pre-filled. %>
+            <img src="<%= item.src %>">
+          <% else %>
+            <img lazy-src="<%= item.src %>">
+          <% end %>
+          <div class="carousel-caption">
+            <%= item.text %>
+          </div>
+        </a>
       </div>
-      </a>
-    </div>
-    <div class="item">
-      <img src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/needlework/needlework_554x340.png">
-      <div class="carousel-caption">
-        Second
-      </div>
-    </div>
-    <div class="item">
-      <img lazy-src="https://s3.amazonaws.com/openvault.wgbh.org/scholar_exhibits/art_of_asian_cooking/art_of_asian_cooking_554x340.png">
-      <div class="carousel-caption">
-        Third
-      </div>
-    </div>
+    <% end %>
   </div>
 
   <!-- Controls -->
