Flash div left a gap.

--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -6,7 +6,7 @@
     }
     
     .carousel {
-        
+        margin-top: -1px; // Flash div above inserts a gap.
     }
  
     // Text with transparent background
