--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -7,21 +7,23 @@
     
     .carousel {
         margin-top: -1px; // Flash div above inserts a gap.
-    }
- 
-    // Text with transparent background
-/*        img {
-            width: ($container-md - 2*$grid-gutter-width) / 3; // ie, the width of col-md-4
-            height: 200px; // TODO: What we need are appropriately cropped images.
-            margin-bottom: $grid-gutter-width;
+        .carousel-control {
+            background: $transparent;
+            padding: 50px 0px;
+            top: 30% !important;
+            bottom: 30% !important;
+            width: 15% !important;   
         }
-        h2 {
-           position: absolute;
-           bottom: 0px;
-           left: 0px;
-           margin: $grid-gutter-width $grid-gutter-width/2;
-           background-color: $transparent;
-           color: #FFF;
-           padding: $grid-gutter-width/4;
-        }*/
+        .carousel-caption {
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            right: auto;
+            font-size: 300%;
+            background-color: $transparent;
+            color: #FFF;
+            text-align: left;
+            padding: $grid-gutter-width/4 $grid-gutter-width;
+        }
+    }
 }
