--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div class="carousel slide" data-ride="carousel" data-interval="100000">
+<div id="carousel" class="carousel slide" data-ride="carousel" data-interval="100000">
   <%# 100 seconds between images, to minimize distractions for now. %>
 
   <!-- Wrapper for slides -->
@@ -6,10 +6,14 @@
     <% Carousel.items.each_with_index do |item, index| %>
       <div class="item <%= 'active' if index == 0 %>">
         <a href="<%= item.href %>">
-          <% if index <= 1 # The first 2 images need to be pre-filled. %>
-            <img src="<%= item.src %>">
+          <% if index <= 1 || index == Carousel.items.count - 1 %>
+            <%# 
+              The first 2 images and the very last one need to be pre-filled. 
+              Also supply lazy src on each so it can be reset for any.
+            %>
+            <img data-lazy-src="<%= item.src %>" src="<%= item.src %>" >
           <% else %>
-            <img lazy-src="<%= item.src %>">
+            <img data-lazy-src="<%= item.src %>">
           <% end %>
           <div class="carousel-caption">
             <%= item.text %>
@@ -20,11 +24,11 @@
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+  <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
