--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div class="row">
-    <%= render partial: 'shared/grid', locals: {sets: @collections, path: 'collections'} %>  
+    <%= render partial: 'shared/grid', locals: {items: @all, path: 'collections'} %>  
   </div>
 </div>
