--- a/app/views/shared/_grid.html.erb
+++ b/app/views/shared/_grid.html.erb
@@ -1,12 +1,12 @@
-<% sets.each do |set| %>
+<% items.each do |item| %>
   <div class="col-md-4 col-sm-6">
-    <a href="<%= '/' + path + '/' + set.tab_path %>">
-      <!-- Sort order: <%= set.head_html.gsub('<p>', '').to_f %> -->
-      <img src="<%= set.img_src %>"/>
+    <a href="<%= '/' + path + '/' + item.tab_path %>">
+      <!-- Sort order: <%= item.head_html.gsub('<p>', '').to_f %> -->
+      <img src="<%= item.img_src %>"/>
       <div class="info">
-        <h2><%= set.title %></h2>
-        <% if set.respond_to? :author %>
-          <%= set.author %>
+        <h2><%= item.title %></h2>
+        <% if item.respond_to? :author %>
+          <%= item.author %>
         <% end %>
       </div>
     </a>
