show page titles.

--- a/app/views/exhibits/show.html.erb
+++ b/app/views/exhibits/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) do %>
-  <%= t('exhibits') + ' - ' + t('blacklight.application_name') %>
+  <%= @item.title + ' - ' + t('blacklight.application_name') %>
 <% end %>
 
 <div class="container-fluid">
