--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,4 +25,25 @@
       <div>Check out collections of significant WGBH productions, including unique full-length interviews.</div>
     </div>
   </div>
+  
+  <div class="row" id="about">
+    <div class="col-sm-6">
+      <h3>What is Open Vault?</h3>
+      <p>We provide online access to unique and historically important content
+        produced by the public television and radio station WGBH.</p>
+      <p><b><a href="/about">About Us</a></b></p>
+    </div>
+    <div class="col-sm-6">
+      <h3>Follow Us!</h3>
+    </div>
+    <div class="col-sm-2">
+      Facebook
+    </div>
+    <div class="col-sm-2">
+      Twitter
+    </div>
+    <div class="col-sm-2">
+      Blog
+    </div>
+  </div>
 </div>
