Fix the logo on the bottom. Could do it with pure CSS, if we embedded the SVG, but that would prevent us using other image types.

--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -40,5 +40,7 @@
         color: $grey;
         b a { color: #A00; }
         a { color: $grey; }
+        .not-home { display: none; }
+        .only-home { display: inline; }
     }
 }
