--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -17,7 +17,7 @@
         <p><%= link_to('Visiting the Archives', '/visiting the archives') %></p>
       </ul>
       <div class="col-md-5">
-        <img src="/wgbh-logo.svg"><br/>
+        <img class="not-home" src="/wgbh-logo.svg"><img class="only-home" src="/wgbh-logo-grey.svg"><br/>
         Copyright &copy; 2015 WGBH Educational Foundation<br/>
         All rights reserved
       </div>
