Social button CSS.

--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -33,6 +33,13 @@
         background: $grey;
         color: #FFF;
         a { color: $yellow; }
+        a.btn {
+            color: $dark-blue; 
+            background: $light-grey;
+            width: 95%;
+            height: 50px;
+            img { height: 100%}
+        }
     }
     
     #footer {
