--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,17 +33,23 @@
         produced by the public television and radio station WGBH.</p>
       <p><b><a href="/about">About Us</a></b></p>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-6 text-center">
       <h3>Follow Us!</h3>
     </div>
-    <div class="col-sm-2">
-      Facebook
+    <div class="col-sm-2 text-center">
+      <a href="todo" class="btn btn-lg">
+        <img src="/images/facebook_logo.png"/>
+      </a>
     </div>
-    <div class="col-sm-2">
-      Twitter
+    <div class="col-sm-2 text-center">
+      <a href="todo" class="btn btn-lg">
+        <img src="/images/twitter_logo.png"/>
+      </a>
     </div>
-    <div class="col-sm-2">
-      Blog
+    <div class="col-sm-2 text-center">
+      <a href="todo" class="btn btn-lg">
+        <b>Blog</b>
+      </a>
     </div>
   </div>
 </div>
