tweak for mobile.

--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -39,6 +39,7 @@
             width: 95%;
             height: 50px;
             img { height: 100%}
+            margin-bottom: 4px; // Just for mobile, really.
         }
     }
     
