links and targets.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,17 +37,17 @@
       <h3>Follow Us!</h3>
     </div>
     <div class="col-sm-2 text-center">
-      <a href="todo" class="btn btn-lg">
+      <a href="https://www.facebook.com/wgbharchives" target="_blank" class="btn btn-lg">
         <img src="/images/facebook_logo.png"/>
       </a>
     </div>
     <div class="col-sm-2 text-center">
-      <a href="todo" class="btn btn-lg">
+      <a href="https://twitter.com/wgbharchives" target="_blank" class="btn btn-lg">
         <img src="/images/twitter_logo.png"/>
       </a>
     </div>
     <div class="col-sm-2 text-center">
-      <a href="todo" class="btn btn-lg">
+      <a href="http://blog.openvault.wgbh.org/" target="_blank" class="btn btn-lg">
         <b>Blog</b>
       </a>
     </div>
