invert a and h2 so the whole yellow box is clickable.

--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -1,7 +1,7 @@
 .blacklight-home-index {
-    h2 {
+    a h2 {
+        color: $dark-blue;
         background: #F4BA54;
-        a { color: $dark-blue; }
         padding: 1em 0em; // no side padding, to avoid unnecessary line-wrapping in medium width.
     }
     
