--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,17 +11,17 @@
 
   <div class="row">
     <div class="col-md-4">
-      <h2 class="text-center"><%= link_to(t('series'), '/series') %></h2>
+      <a href="/series"><h2 class="text-center"><%= t('series') %></h2></a>
       <div>Browse titles in the WGBH Media Library and Archives collection.</div>
     </div>
 
     <div class="col-md-4">
-      <h2 class="text-center"><%= link_to(t('exhibits'), '/exhibits') %></h2>
+      <a href="/exhibits"><h2 class="text-center"><%= t('exhibits') %></h2></a>
       <div>Explore selected topics and digitized programs of historical significance curated by WGBH Mellon Scholars.</div>
     </div>
 
     <div class="col-md-4">
-      <h2 class="text-center"><%= link_to(t('collections'), '/collections') %></h2>
+      <a href="/collections"><h2 class="text-center"><%= t('collections') %></h2></a>
       <div>Check out collections of significant WGBH productions, including unique full-length interviews.</div>
     </div>
   </div>
