Colors match spec. (But spec is inconsistent: #55.)

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -46,7 +46,7 @@
             .panel-collapse .panel-body {
                 padding: 0px;
                 .facet-values {
-                    background: $light-grey;
+                    background: $pale-grey;
                     font-weight: bold;
                     // So the pull-down is the same width as the button above.
                     // TODO: find something better?
