--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,7 +1,14 @@
-$dark-blue: #1A385C;
-$medium-blue: #5776AD;
-$light-blue: #C5CDDE;
-$yellow: #F3BA53;
-$grey: #949599;
-$light-grey: #EEEFF1;
+$dark-blue: #063673;
+$medium-blue: #5174B8;
+$light-blue: #BFA6CF;
+$pale-blue: #DEE4F0; // TODO: unused?
+
+$yellow: #F4BA54; // Spec is wrong: my best guess.
+$red: #840E24;
+
+$dark-grey: #414042; // TODO: unused?
+$medium-grey: #6E6F71; // TODO: unused?
+$light-grey: #949599;
+$pale-grey: #F1F2F2;
+
 $transparent: rgba(0, 0, 0, 0.4);
