--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -1,4 +1,5 @@
 html > body {
     // TODO: "Whitney SSm A", "Whitney SSm B" ?
-    font-family: sans-serif;  
+    font-family: sans-serif;
+    a:hover { text-decoration: none; } // No examples in specs of underline.
 }
