--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -12,6 +12,12 @@
         left: 240px;
         top: 7px;
     }
+    .nav a {
+        margin-left: 2em;
+        font-size: 22px;
+        font-weight: 600;
+        &:hover { color: $yellow; }
+    }
 }
 
 #footer {
