--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -1,5 +1,6 @@
 html > body {
     // TODO: "Whitney SSm A", "Whitney SSm B" ?
     font-family: sans-serif;
+    font-size: 18px; // Best guess
     a:hover { text-decoration: none; } // No examples in specs of underline.
 }
