--- a/app/assets/stylesheets/locals/series-index.css.scss
+++ b/app/assets/stylesheets/locals/series-index.css.scss
@@ -2,6 +2,7 @@
     .letters {
         padding: $grid-gutter-width/2;
         background: $medium-blue;
+        font-size: 24px;
         font-weight: bold;
         color: #FFF;
         a { 
