--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <a href="/collections"><%= t('collections') %></a>
+      <a href="/collections" class="back"><%= t('collections') %></a>
       <%= render partial: 'shared/above_tabs', locals: {item: @item} %>
     </div>
   </div>
