--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -46,14 +46,21 @@
 }
 
 .blacklight-collections-show,.blacklight-exhibits-show {
-    div.pull-left img {
-        // This is very ad hoc.
-        margin-left: -$grid-gutter-width/2;
-        margin-right: $grid-gutter-width/2;
-        margin-bottom: $grid-gutter-width;
-        width: 100%;
-    }
     #main-container {
+        a.back {
+           font-size: 24px;
+        }
+        .byline {
+            margin-top: 0px;
+            margin-bottom: 30px;
+        }
+        div.pull-left img {
+            // This is very ad hoc.
+            margin-left: -$grid-gutter-width/2;
+            margin-right: $grid-gutter-width/2;
+            margin-bottom: $grid-gutter-width;
+            width: 100%;
+        }
         img {
             width: 100%;
             margin-bottom: 0;
