--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -15,7 +15,7 @@
         </div>
         <ul>
           <% group.each do |pair| %>
-            <a href="/catalog?series_title=<%= CGI.escape(pair.first) %>">
+            <a href="/catalog?f[series_title][]=<%= CGI.escape(pair.first) %>">
               <%= pair.first %> (<%= pair.second %>)
             </a>
             <br/>
