Remove special casing for collections without tabs: everything has at least one tab. For now, for just hard code the html where we need outside links.

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -12,7 +12,7 @@
   <%= render partial: 'shared/tab_row', locals: {item: @item, skip: ['intro', 'extra']}%>
   <div class="row">
     <div class="col-md-12">
-      <%= @item.tabs[params[:tab]].html_safe if @item.tabs[params[:tab]]%>
+      <%= @item.tabs[params[:tab]].html_safe %>
     </div>
     <div class="col-md-12">
       <%= @item.tabs['extra'].html_safe if @item.tabs['extra']%>
