--- a/app/views/shared/_tab_row.html.erb
+++ b/app/views/shared/_tab_row.html.erb
@@ -1,9 +1,11 @@
 <% anchor = 'tabs' %>
 <div class="row" id="<%= anchor %>">
-  <% (item.tabs.keys).reject { |x| skip.include?(x) }.each do |tab| %>
-    <% is_current = tab == params[:tab] %>
-    <div class="tab col-md-2 <%= 'tab-current' if is_current %>">
-      <%= link_to_unless(is_current, tab.titlecase, "#{tab}##{anchor}") %>
-    </div>
-  <% end %>
+  <% (item.tabs.keys).reject { |x| skip.include?(x) }.tap do |tabs|
+    tabs.each do |tab| %>
+      <% is_current = tab == params[:tab] %>
+      <div class="tab col-md-2 <%= 'tab-current' if is_current %>">
+        <%= link_to_unless(is_current, tab.titlecase, "#{tab}##{anchor}") %>
+      </div>
+    <% end if tabs.count > 1
+    end %>
 </div>
