--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -12,10 +12,10 @@
               {field: 'series_title', label: 'Series', link: true},
               {field: 'program_title', label: 'Program', link: true},
               {field: 'program_number'},
-              {field: 'item_title', label: 'Title'},
+              {field: 'asset_title', label: 'Title'},
               {field: 'series_description'},
               {field: 'program_description'},
-              {field: 'item_description', label: 'Description'},
+              {field: 'asset_description', label: 'Description'},
               {field: 'duration'},
               {field: 'asset_type'},
               {field: 'media_type'},
