Balance the tag.

--- a/app/views/catalog/_password_modal.html.erb
+++ b/app/views/catalog/_password_modal.html.erb
@@ -10,7 +10,7 @@
         Please enter it below.
       </div>
       <div class="modal-footer">
-        <input id="password" type="password">
+        <input id="password" type="password"></input>
         <button type="submit" class="btn btn-primary" onclick="
           if ($('#password').val() === $('#hint').text()) {
             $('#password-modal').modal('hide');
