--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,15 +1,15 @@
-$dark-blue: #063673;
-$medium-blue: #5174B8;
-$light-blue: #BFA6CF;
-$pale-blue: #DEE4F0; // TODO: unused?
+$dark-blue: #1F355E;
+$medium-blue: #5D73B1;
+$light-blue: #93A3CA;
+$pale-blue: #DEE5EF; // TODO: unused?
 
-$yellow: #F4BA54; // Spec is wrong: my best guess.
+$yellow: #EFBC45; // Spec is wrong: my best guess.
 $pale-yellow: #FDD88B; // Not in spec.
-$red: #840E24;
+$red: #8F152C;
 
-$dark-grey: #414042; // TODO: unused?
+$dark-grey: #414141; // TODO: unused?
 $medium-grey: #6E6F71; // TODO: unused?
-$light-grey: #949599;
-$pale-grey: #F1F2F2;
+$light-grey: #939598;
+$pale-grey: #F1F1F1;
 
 $transparent: rgba(0, 0, 0, 0.6); // TODO: not sure about spec.
